--- a/website/templates/_navbar.html
+++ b/website/templates/_navbar.html
@@ -1,4 +1,9 @@
-<div class="navbar">
-    <a href="/">ホーム</a>
-    <a href="/pisto">合宿</a>
+<div class="navbar bg-primary">
+    <u>
+        <a class ="text-light mx-5" href="/">ホーム</a>
+        <a class ="text-light mx-5" href="/pisto">合宿</a>
+        <a class ="text-light mx-5" href="/blog/post_list">ブログ</a>
+        <a class ="text-light mx-5" href="/mypage">マイページ</a>
+        <a class ="text-light mx-5" href="/staff-admin">管理者ログイン</a>
+    </u>
 </div>
