--- a/website/templates/_navbar.html
+++ b/website/templates/_navbar.html
@@ -1,9 +1,25 @@
-<div class="navbar bg-primary">
-    <u>
-        <a class ="text-light mx-5" href="/">ホーム</a>
-        <a class ="text-light mx-5" href="/pisto">合宿</a>
-        <a class ="text-light mx-5" href="/blog/post_list">ブログ</a>
-        <a class ="text-light mx-5" href="/mypage">マイページ</a>
-        <a class ="text-light mx-5" href="/staff-admin">管理者ログイン</a>
-    </u>
+<div class="navbar navbar-expand-lg navbar-light bg-dark container-fluid mb-1">
+    <nav class="h3 text-white">メニュー</nav>
+    <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link text-white" href="/">ホーム<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/pisto">合宿</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/blog/post_list">BOT通知設定</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/mypage">マイページ</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/staff-admin">管理者ログイン</a>
+        </li>  
+      </ul>
+    </div>
 </div>
