--- a/website/templates/registration/index.html
+++ b/website/templates/registration/index.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
+
+{% block header %}
+<a class="navbar-brand" href="/">
+    <h2>アカウント管理</h2>
+</a>
+{% endblock %}
 {% block main %}
-<h2>会員ページ</h2>
+<h3>会員ページ</h3>
 <p>{{ user }}さん、こんにちは！</p>
 
 <p><a href="{% url 'signup' %}">新規アカウント作成</a></p>
 <p><a href="{% url 'logout' %}">ログアウト</a></p>
 <p><a href="{% url 'password_change' %}">パスワードの変更</a></p>
-<p><a href="{% url 'password_reset' %}">パスワードを忘れた場合</a></p>
 {% endblock %}
