--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,18 +7,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
-<body>
-    {% include "_navbar.html" %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">アカウント管理</a>
-    </nav>
+<body class = "contaiear-fluid">
+    <div>
+        {% include "_navbar.html" %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            {%block header%}
 
-    <div class="container mt-4">
-        {%block main %}
-        コンテンツがありません。
-        {%endblock %}
+            {%endblock %}
+            
+        </nav>
+
+        <div class="container mt-4 h3">
+            {%block main %}
+            コンテンツがありません。
+            {%endblock %}
+        </div>
+
+        {% include "_footer.html" %}
     </div>
-
-    {% include "_footer.html" %}
 </body>
 </html>
