--- a/website/templates/blog/base.html
+++ b/website/templates/blog/base.html
@@ -9,9 +9,12 @@
     <body>
         {% include "../_navbar.html" %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/blog/post_list">匿名ブログ</a>
+            <a class="navbar-brand" href="/blog/post_list">
+                <h2>BOT通知設定</h2>
+
+            </a>
         </nav>
-        <div class="container mt-4">
+        <div class="container mt-4 h3">
         {% block main %}
         <p>※コンテンツがありません。</p>
         {% endblock %}
