--- a/website/templates/blog/post_form.html
+++ b/website/templates/blog/post_form.html
@@ -1,10 +1,10 @@
 {% extends "blog/base.html" %}
 
 {% block main %}
-<h2>新規投稿</h2>
+<h2>新規通知設定</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="投稿" class="btn btn-primary" />
+    <input type="submit" value="設定" class="btn btn-primary" />
 </form>
 {% endblock %}
