--- a/website/templates/blog/post_list.html
+++ b/website/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 {% extends "blog/base.html" %}
 {% block main %}
-<h2>記事一覧</h2>
+<h3>BOT通知一覧</h3>
 <ol>
     {% for post in object_list %}
     <li><a href="{% url 'detail' post.id %}">{{ post.title }}</a></li>
     {% endfor %}
 </ol>
-<p><a href="{% url 'create' %}">新規投稿</a></p>
+<p><a href="{% url 'create' %}">新規通知設定</a></p>
 {% endblock %}
