--- a/website/templates/pisto.html
+++ b/website/templates/pisto.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
+{% block header %}
+<a class="navbar-brand" href="/pisto">
+    <h2>合宿</h2>
+</a>
+{%endblock %}
+
 {%block main %}
-    <h1>合宿</h1>
+    <h3>合宿一覧</h3>
     <p>現在時刻 {% now "Y年m月d日 H時i分" %}</p>
-    {%endblock %}
+{%endblock %}
