--- a/website/templates/gassyuku/base.html
+++ b/website/templates/gassyuku/base.html
@@ -9,8 +9,9 @@
     <body>
         {% include "../_navbar.html" %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/blog/post_list">
-                <h2>学科資料庫</h2>
+            <a class="navbar-brand" href="gassyuku/post_list">
+                <h2>合宿</h2>
+
             </a>
         </nav>
         <div class="container mt-4 h3">
