--- a/website/templates/_navbar.html
+++ b/website/templates/_navbar.html
@@ -8,12 +8,17 @@
         <li class="nav-item active">
           <a class="nav-link text-white" href="/">ホーム<span class="sr-only">(current)</span></a>
         </li>
+        <!--
         <li class="nav-item">
-          <a class="nav-link text-white" href="/pisto">合宿</a>
+          <a class="nav-link text-white" href="/gassyuku/post_list">合宿</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/blog/post_list">BOT通知設定</a>
+          <a class="nav-link text-white" href="/alert/post_list">BOT通知設定</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/blog/post_list">学科資料</a>
+        </li>
+      -->
         <li class="nav-item">
             <a class="nav-link text-white" href="/mypage">マイページ</a>
         </li>
